2007-11-26  Juanma Barranquero  <lekktu@gmail.com>

	* emacs-lisp/bytecomp.el (batch-byte-recompile-directory): Doc fix.

2007-11-26  Glenn Morris  <rgm@gnu.org>

	* calendar/cal-menu.el (cal-menu-holidays-menu): Use :label rather
	than :suffix.

	* emacs-lisp/easymenu.el (easy-menu-define): Doc fix.

2007-11-26  Simon Josefsson  <simon@josefsson.org>

	* net/imap.el: Move from ../gnus.

2007-11-25  Reiner Steib  <Reiner.Steib@gmx.de>

	* doc-view.el (doc-view-mode-p): New function.

2007-11-25  Dan Nicolaescu  <dann@ics.uci.edu>

	* mail/mspools.el (rmail-get-new-mail):
	* mail/reporter.el (mail-position-on-field, mail-text):
	* mail/rmail.el (mail-position-on-field, mail-text-start)
	(rmail-update-summary):
	* mail/rmailedit.el (rmail-summary-disable, rmail-summary-enable):
	* mail/rmailmsc.el (rmail-parse-file-inboxes, rmail-show-message):
	* mail/rmailout.el (rmail-update-summary):
	* mail/rmailsort.el (rmail-update-summary):
	* mail/sendmail.el (dired-move-to-filename, dired-get-filename)
	(dired-view-file):
	* mail/uce.el (mail-strip-quoted-names):
	* mail/undigest.el (rmail-update-summary):
	* mail/unrmail.el (mail-strip-quoted-names):
	* ediff.el (diff-latest-backup-file): Declare as functions.

	* obsolete/mlsupport.el (ml-previous-page): Fix typo.
	(kill-to-end-of-line):
	* obsolete/rnews.el (news-set-minor-modes):
	Remove non working functions.

2007-11-25  Glenn Morris  <rgm@gnu.org>

	* eshell/esh-maint.el (top-level): Use require with NOERROR for
	pcomplete.  Don't mess with load-path.

	* eshell/eshell.el (eshell-report-bug-address): Remove.
	(eshell-report-bug): Redefine as an alias for report-emacs-bug.

2007-11-24  Glenn Morris  <rgm@gnu.org>

	* calendar/appt.el: Remove leading `*' from defcustom doc-strings.
	(appt-disp-window): Don't require electric.
	Simplify minibuffer-avoidance code.
	(appt-select-lowest-window): Avoid minibuffer.

	* eshell/eshell.el: Remove leading `*' from defcustom doc-strings.
	(esh-mode): Require it.